--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 	<main role="main">
 		<section role="region" class="main-section">
 			<div class="main-game-container">
-				<h1>test</h1>
-				<div class="sprite-container"></div>
+				<div class="sprite-container">
+					
+				</div>
 			</div>
 		</section>
 	</main>
