fixed async issues, working on array functions & making progress on game functions

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 	</section>
 
 	<main role="main">
+		<section role="region" class="go-section">
+			<div class="go-container">
+				<div class="go-btn-container">
+					<input type="button" class="go-btn" value="Let's Play!">
+				</div>
+			</div>
+		</section>
 		<section role="region" class="main-section">
 			<div class="main-game-container">
 				<div class="sprite-container">
