working on js files, added content to html and css

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 		</section>
 		<section role="region" class="main-section">
 			<div class="main-game-container">
+				<div class="header-container">
+					<h1>Gotta Find 'Em All!</h1>
+				</div>
+				<div class="answer-container">
+					
+				</div>
 				<div class="sprite-container">
 					
 				</div>
