--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
 					<h1>Gotta Find 'Em All!</h1>
 				</div>
 				<div class="answer-container">
-					
 				</div>
-				<div class="sprite-container">
-					
+				<div class="sprite-container">	
+				</div>
+				<div class="next-container">
+					<!-- <div class="loader"></div> -->
+					<input type="image" class="next-btn" src="images/pika.png" alt="pokeball button">
+					<!-- <button type="submit">NEXT</button> -->
 				</div>
 			</div>
 		</section>
