made additions to html and css files, minor changes to js file, deleted unused code

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 		<div class="content-container" id="intro-instructions">
 			<img class="landing-image" src="images/allpoke.png">
 			<div class="landing-info">
-				<h1>Find That Pokemon!</h1>
+				<h1>Pokémon Hunt</h1>
 				<br>
-				<h3>This is a simple game built with Pokemon Data from the opensource PokéAPI. <br> <br> Click on the Pokeball and let's begin!</h3>
+				<h3>The objective of this game is to find 10 random Pokémon as fast as you can. Test your visual ability and your knowledge of Pokémon at the same time.</h3>
+				<br>
+				<h3>Click on the Pokéball and let's begin!</h3>
 				<br>
 				<div class="start-btn-container">
 					<input type="image" class="start-btn" src="images/pokeball.png" alt="pokeball button">
@@ -29,17 +31,24 @@
 	<main role="main">
 		<section role="region" class="main-section">
 			<div class="main-game-container">
-				<div class="header-container">
-					<h1>Gotta Find 'Em All!</h1>
-				</div>
-				<div class="answer-container">
-				</div>
-				<div class="sprite-container">	
-				</div>
-				<div class="next-container">
-					<!-- <div class="loader"></div> -->
-					<input type="image" class="next-btn" src="images/pika.png" alt="pokeball button">
-					<!-- <button type="submit">NEXT</button> -->
+				<div class="main-game-info">
+					<div class="header-container">
+						<h1>Pokémon Hunt</h1>
+					</div>
+					<div class="answer-container">
+					</div>
+					<div class="sprite-container">	
+					</div>
+					<div class="next-container">
+						<div class="stats">
+							
+						</div>
+						<br>
+						<div class="next-instructions">
+							<h3>Click on Pikachu to continue</h3>
+						</div>
+						<input type="image" class="next-btn" src="images/pika.png" alt="pokeball button">
+					</div>
 				</div>
 			</div>
 		</section>
