added control buttons to game

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 				<div class="main-game-info">
 					<div class="header-container">
 						<h1>Pokémon Hunt</h1>
+						<div class="row control-container">
+							<div class="control-btn-container"><button type="submit" id="skip-btn">Skip</button></div>
+							<div class="control-btn-container"><button type="submit" id="restart-btn">Restart</button></div>
+						</div>
 					</div>
 					<div class="answer-container">
 					</div>
