added event handler to restart button, removed unused code, organized html structure, edited styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<section role="region" class="header-section">
-		<div class="content-container" id="intro-instructions">
+		<div class="landing-container" id="intro-instructions">
 			<img class="landing-image" src="images/allpoke.png">
 			<div class="landing-info">
 				<h1>Pokémon Hunt</h1>
@@ -31,28 +31,25 @@
 	<main role="main">
 		<section role="region" class="main-section">
 			<div class="main-game-container">
-				<div class="main-game-info">
-					<div class="header-container">
-						<h1>Pokémon Hunt</h1>
-						<div class="row control-container">
-							<div class="control-btn-container"><button type="submit" id="skip-btn">Skip</button></div>
-							<div class="control-btn-container"><button type="submit" id="restart-btn">Restart</button></div>
-						</div>
+				<div class="header-container">
+					<h1>Pokémon Hunt</h1>
+					<div class="row control-container">
+						<div class="control-btn-container"><button type="submit" id="skip-btn">Skip</button></div>
+						<div class="control-btn-container"><button type="submit" id="restart-btn">Restart</button></div>
 					</div>
-					<div class="answer-container">
+				</div>
+				<div class="answer-container">
+				</div>
+				<div class="sprite-container">	
+				</div>
+				<div class="next-container">
+					<div class="stats">				
 					</div>
-					<div class="sprite-container">	
+					<br>
+					<div class="next-instructions">
+						<h3>Click on Pikachu to continue</h3>
 					</div>
-					<div class="next-container">
-						<div class="stats">
-							
-						</div>
-						<br>
-						<div class="next-instructions">
-							<h3>Click on Pikachu to continue</h3>
-						</div>
-						<input type="image" class="next-btn" src="images/pika.png" alt="pokeball button">
-					</div>
+					<input type="image" class="next-btn" src="images/pika.png" alt="pokeball button">
 				</div>
 			</div>
 		</section>
