making some appearance changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="landing-info">
 				<h1>Pokémon Hunt</h1>
 				<br>
-				<h3>The objective of this game is to find 10 random Pokémon as fast as you can. Test your visual ability and your knowledge of Pokémon at the same time.</h3>
+				<h3>The objective of this game is to find 10 random Pokémon as fast as you can.</h3> <h3> Test your visual ability and your knowledge of Pokémon at the same time.</h3>
 				<br>
 				<h3>Click on the Pokéball and let's begin!</h3>
 				<br>
