working on function to output final results

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 				</div>
 				<div class="answer-container">
 				</div>
+				<div class="final-results-container">
+				</div>
 				<div class="sprite-container">	
 				</div>
 				<div class="next-container">
