testing different buttons

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 				<div class="header-container">
 					<h1>Pokémon Hunt</h1>
 					<div class="row control-container">
-						<div class="control-btn-container"><button type="submit" id="skip-btn">Skip</button></div>
-						<div class="control-btn-container"><button type="submit" id="restart-btn">Restart</button></div>
+						<!-- <div class="control-btn-container"><button type="submit" id="skip-btn">Skip</button></div> -->
+						<!-- <div class="control-btn-container"><button type="submit" id="restart-btn">Restart</button></div> -->
+						<div class="control-btn-container"><input type="image" id="skip-btn" src="images/skip1.png" alt="pokeball button"></div>
+						<div class="control-btn-container"><input type="image" id="restart-btn" src="images/restart1.png" alt="pokeball button"></div>
 					</div>
 				</div>
 				<div class="answer-container">
