made css changes, completed some js functions

--- a/index.html
+++ b/index.html
@@ -34,24 +34,27 @@
 				<div class="header-container">
 					<h1>Pokémon Hunt</h1>
 					<div class="row control-container">
-						<!-- <div class="control-btn-container"><button type="submit" id="skip-btn">Skip</button></div> -->
-						<!-- <div class="control-btn-container"><button type="submit" id="restart-btn">Restart</button></div> -->
-						<div class="control-btn-container"><input type="image" id="skip-btn" src="images/skip1.png" alt="pokeball button"></div>
-						<div class="control-btn-container"><input type="image" id="restart-btn" src="images/restart1.png" alt="pokeball button"></div>
+						<div class="control-btn-container"><button type="submit" id="skip-btn">Skip</button></div>
+						<div class="control-btn-container"><button type="submit" id="restart-btn">Restart</button></div> 
+						<!-- <div class="control-btn-container"><input type="image" id="skip-btn" src="images/skip1.png" alt="pokeball button"></div>
+						<div class="control-btn-container"><input type="image" id="restart-btn" src="images/restart1.png" alt="pokeball button"></div> -->
 					</div>
 				</div>
 				<div class="answer-container">
 				</div>
 				<div class="final-results-container">
+					<h3>Game Results</h3>
+					<div class="final-stats">
+						
+					</div>
 				</div>
 				<div class="sprite-container">	
 				</div>
 				<div class="next-container">
 					<div class="stats">				
 					</div>
-					<br>
 					<div class="next-instructions">
-						<h3>Click on Pikachu to continue</h3>
+						<h3>Click on Pikachu to find the next Pokémon</h3>
 					</div>
 					<input type="image" class="next-btn" src="images/pika.png" alt="pokeball button">
 				</div>
