made some text changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<br>
 				<h3>The objective of the game is to find 10 random Pokémon as fast as you can.</h3> <br> <h3> Test your visual ability and your knowledge of Pokémon.</h3>
 				<br>
-				<h3>Click on the Pokéball and let's begin!</h3>
+				<h3>Click on the Pokéball to play!</h3>
 				<br>
 				<div class="start-btn-container">
 					<input type="image" class="start-btn" src="images/pokeball.png" alt="pokeball button">
@@ -53,7 +53,7 @@
 					<div class="stats">				
 					</div>
 					<div class="next-instructions">
-						<h3>Click on Pikachu to find the next Pokémon</h3>
+						<h3>Click on Pikachu for the next Pokémon</h3>
 					</div>
 					<input type="image" class="next-btn" src="images/pika.png" alt="pokeball button">
 				</div>
